Create folder images
Create and add images to welcome page

--- a/AssignmentPRJ/web/index.html
+++ b/AssignmentPRJ/web/index.html
@@ -10,6 +10,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Home page</div>
+        <img src="Images/BG_welcome.jpg" alt="alt"/>
+        <h1>Welcome to online comic website</h1>
+        <form action="Home"  method="GET">            
+            <input type="submit" value="Read comic" />
+        </form>
     </body>
 </html>
