--- a/AssignmentPRJ/web/index.html
+++ b/AssignmentPRJ/web/index.html
@@ -8,6 +8,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <title>Assignment PRJ</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="WEB-INF/styles.css"/>
     </head>
     <body>
         <img src="Images/BG_welcome.jpg" alt="alt"/>
